src/gtkscintilla.h

typedef struct _GtkScintilla			GtkScintilla;
void 				gtk_scintilla_set_property				(GObject *object, guint property_id, const GValue *value, GParamSpec *pspec);
void 		gtk_scintilla_set_save_point (GtkScintilla *sci);
void 		gtk_scintilla_set_anchor (GtkScintilla *sci, gint posAnchor);
void 		gtk_scintilla_set_eol_mode (GtkScintilla *sci, gint eolMode);
void 		gtk_scintilla_set_styling (GtkScintilla *sci, gint length, gint style);
void 		gtk_scintilla_set_buffered_draw (GtkScintilla *sci, gboolean buffered);
void 		gtk_scintilla_set_tab_width (GtkScintilla *sci, gint tabWidth);
void 		gtk_scintilla_set_code_page (GtkScintilla *sci, gint codePage);
void 		gtk_scintilla_set_margin_type_n (GtkScintilla *sci, gint margin, gint marginType);
void 		gtk_scintilla_set_margin_width_n (GtkScintilla *sci, gint margin, gint pixelWidth);
void 		gtk_scintilla_set_margin_mask_n (GtkScintilla *sci, gint margin, gint mask);
void 		gtk_scintilla_set_margin_sensitive_n (GtkScintilla *sci, gint margin, gboolean sensitive);
void 		gtk_scintilla_set_sel_fore (GtkScintilla *sci, gboolean useSetting, gint fore);
void 		gtk_scintilla_set_sel_back (GtkScintilla *sci, gboolean useSetting, gint back);
void 		gtk_scintilla_set_sel_alpha (GtkScintilla *sci, gint alpha);
void 		gtk_scintilla_set_sel_eol_filled (GtkScintilla *sci, gboolean filled);
void 		gtk_scintilla_set_caret_fore (GtkScintilla *sci, gint fore);
void 		gtk_scintilla_set_styling_ex (GtkScintilla *sci, gint length, const gchar *styles);
void 		gtk_scintilla_set_caret_period (GtkScintilla *sci, gint periodMilliseconds);
void 		gtk_scintilla_set_style_bits (GtkScintilla *sci, guchar bits);
void 		gtk_scintilla_set_line_state (GtkScintilla *sci, gint line, gint state);
void 		gtk_scintilla_set_caret_line_visible (GtkScintilla *sci, gboolean show);
void 		gtk_scintilla_set_caret_line_back (GtkScintilla *sci, gint back);
void		gtk_scintilla_set_indent (GtkScintilla *sci, gint indentSize);
void		gtk_scintilla_set_line_indentation (GtkScintilla *sci, gint line, gint indentSize);
void		gtk_scintilla_set_h_scroll_bar (GtkScintilla *sci, gboolean show);
void		gtk_scintilla_set_indentation_guides (GtkScintilla *sci, gint indentView);
void		gtk_scintilla_set_highlight_guide (GtkScintilla *sci, gint column);
void		gtk_scintilla_set_current_pos (GtkScintilla *sci, gint pos);
void		gtk_scintilla_set_selection_start (GtkScintilla *sci, gint pos);
void		gtk_scintilla_set_selection_end (GtkScintilla *sci, gint pos);
void		gtk_scintilla_set_print_magnification (GtkScintilla *sci, gint magnification);
void		gtk_scintilla_set_print_colour_mode (GtkScintilla *sci, gint mode);
void		gtk_scintilla_set_margin_left (GtkScintilla *sci, gint pixelWidth);
void		gtk_scintilla_set_margin_right (GtkScintilla *sci, gint pixelWidth);
void		gtk_scintilla_set_sel (GtkScintilla *sci, gint start, gint end);
void		gtk_scintilla_set_read_only (GtkScintilla *sci, gboolean read_only);
void		gtk_scintilla_set_overtype (GtkScintilla *sci, gboolean overtype);
void		gtk_scintilla_set_caret_width (GtkScintilla *sci, gint pixelWidth);
void		gtk_scintilla_set_target_end (GtkScintilla *sci, gint pos);
void		gtk_scintilla_set_search_flags (GtkScintilla *sci, gint flags);
void		gtk_scintilla_set_fold_level (GtkScintilla *sci, gint line, gint level);
void		gtk_scintilla_set_fold_expanded (GtkScintilla *sci, gint line, gboolean expanded);
void		gtk_scintilla_set_fold_flags (GtkScintilla *sci, gint flags);
void		gtk_scintilla_set_tab_indents (GtkScintilla *sci, gboolean tabIndents);
void		gtk_scintilla_set_backspace_unindents (GtkScintilla *sci, gboolean bsUnIndents);
void		gtk_scintilla_set_mouse_dwell_time (GtkScintilla *sci, gint periodMilliseconds);
void		gtk_scintilla_set_layout_cache (GtkScintilla *sci, gint mode);
void		gtk_scintilla_set_scroll_width (GtkScintilla *sci, gint pixelWidth);
void		gtk_scintilla_set_scroll_width_tracking (GtkScintilla *sci, gboolean tracking);
void		gtk_scintilla_set_end_at_last_line (GtkScintilla *sci, gboolean endAtLastLine);
void		gtk_scintilla_set_font_quality (GtkScintilla *sci, gint fontQuality);
void		gtk_scintilla_set_first_visible_line (GtkScintilla *sci, gint lineDisplay);
void		gtk_scintilla_set_multi_paste (GtkScintilla *sci, gint multiPaste);
void		gtk_scintilla_set_fold_margin_colour (GtkScintilla *sci, gboolean useSetting, gint back);
void		gtk_scintilla_set_fold_margin_hi_colour (GtkScintilla *sci, gboolean useSetting, gint fore);
void		gtk_scintilla_set_doc_pointer (GtkScintilla *sci, gint pointer);
void		gtk_scintilla_set_mod_event_mask (GtkScintilla *sci, gint mask);
void		gtk_scintilla_set_edge_column (GtkScintilla *sci, gint column);
void		gtk_scintilla_set_edge_mode (GtkScintilla *sci, gint mode);
void		gtk_scintilla_set_edge_colour (GtkScintilla *sci, gint edgeColour);
gboolean 	gtk_scintilla_selection_is_rectangle (GtkScintilla *sci);
void		gtk_scintilla_set_focus (GtkScintilla *sci, gboolean focus);
void		gtk_scintilla_set_status (GtkScintilla *sci, gint statusCode);
void		gtk_scintilla_set_mouse_down_captures (GtkScintilla *sci, gboolean captures);
void		gtk_scintilla_set_cursor (GtkScintilla *sci, gint cursorType);
void		gtk_scintilla_set_control_char_symbol (GtkScintilla *sci, gint symbol);
void		gtk_scintilla_set_print_wrap_mode (GtkScintilla *sci, gint mode);
void		gtk_scintilla_set_hotspot_active_fore (GtkScintilla *sci, gboolean useSetting, gint fore);
void		gtk_scintilla_set_hotspot_active_back (GtkScintilla *sci, gboolean useSetting, gint back);
void		gtk_scintilla_set_hotspot_active_underline (GtkScintilla *sci, gboolean underline);
void		gtk_scintilla_set_hotspot_single_line (GtkScintilla *sci, gboolean singleLine);
void		gtk_scintilla_set_selection_mode (GtkScintilla *sci, gint mode);
void		gtk_scintilla_set_chars_default (GtkScintilla *sci);
void		gtk_scintilla_set_caret_sticky (GtkScintilla *sci, gint useCaretStickyBehaviour);
void		gtk_scintilla_set_paste_convert_endings (GtkScintilla *sci, gboolean convert);
void		gtk_scintilla_selection_duplicate (GtkScintilla *sci);
void		gtk_scintilla_set_caret_line_back_alpha (GtkScintilla *sci, gint alpha);
void		gtk_scintilla_set_caret_style (GtkScintilla *sci, gint caretStyle);
void		gtk_scintilla_set_indicator_current (GtkScintilla *sci, gint indicator);
void		gtk_scintilla_set_indicator_value (GtkScintilla *sci, gint value);
void		gtk_scintilla_set_position_cache (GtkScintilla *sci, gint size);
void		gtk_scintilla_set_keys_unicode (GtkScintilla *sci, gboolean keysUnicode);
void		gtk_scintilla_set_extra_ascent (GtkScintilla *sci, gint extraAscent);
void		gtk_scintilla_set_extra_descent (GtkScintilla *sci, gint extraDescent);
void		gtk_scintilla_set_multiple_selection (GtkScintilla *sci, gboolean multipleSelection);
void		gtk_scintilla_set_additional_selection_typing (GtkScintilla *sci, gboolean additionalSelectionTyping);
void		gtk_scintilla_set_additional_carets_blink (GtkScintilla *sci, gboolean additionalCaretsBlink);
void		gtk_scintilla_set_additional_carets_visible (GtkScintilla *sci, gboolean additionalCaretsBlink);
gint		gtk_scintilla_set_selection (GtkScintilla *sci, gint caret, gint anchor);
void		gtk_scintilla_set_main_selection (GtkScintilla *sci, gint selection);
void		gtk_scintilla_set_selection_n_caret (GtkScintilla *sci, gint selection, gint pos);
void		gtk_scintilla_set_selection_n_anchor (GtkScintilla *sci, gint selection, gint posAnchor);
void		gtk_scintilla_set_selection_n_caret_virtual_space (GtkScintilla *sci, gint selection, gint space);
void		gtk_scintilla_set_selection_n_anchor_virtual_space (GtkScintilla *sci, gint selection, gint space);
void		gtk_scintilla_set_selection_n_start (GtkScintilla *sci, gint selection, gint pos);
void		gtk_scintilla_set_rectangular_selection_caret (GtkScintilla *sci, gint pos);
void		gtk_scintilla_set_rectangular_selection_anchor (GtkScintilla *sci, gint posAnchor);
void		gtk_scintilla_set_rectangular_selection_caret_virtual_space (GtkScintilla *sci, gint space);
void		gtk_scintilla_set_rectangular_selection_anchor_virtual_space (GtkScintilla *sci, gint space);
void		gtk_scintilla_set_rectangular_selection_modifier (GtkScintilla *sci, gint modifier);
void		gtk_scintilla_set_additional_sel_fore (GtkScintilla *sci, gint fore);
void		gtk_scintilla_set_additional_sel_back (GtkScintilla *sci, gint back);
void		gtk_scintilla_set_additional_sel_alpha (GtkScintilla *sci, gint alpha);
void		gtk_scintilla_set_additional_caret_fore (GtkScintilla *sci, gint fore);
void		gtk_scintilla_set_lexer (GtkScintilla *sci, gint lexer);
void		gtk_scintilla_set_lexer_property (GtkScintilla *sci, const gchar *key, const gchar *value);
void		gtk_scintilla_set_keywords (GtkScintilla *sci, gint keywordSet, const gchar *keyWords);
void		gtk_scintilla_set_lexer_language (GtkScintilla *sci, const gchar *language);