bindings/vala/gtkscintilla-1.0.vapi

		[CCode (cname = "gtk_scintilla_selection_duplicate")]
		public void selection_duplicate ();
		[CCode (cname = "gtk_scintilla_selection_is_rectangle")]
		public bool selection_is_rectangle ();
		[CCode (cname = "gtk_scintilla_set_additional_caret_fore")]
		public void set_additional_caret_fore (int fore);
		[CCode (cname = "gtk_scintilla_set_additional_carets_blink")]
		public void set_additional_carets_blink (bool additionalCaretsBlink);
		[CCode (cname = "gtk_scintilla_set_additional_carets_visible")]
		public void set_additional_carets_visible (bool additionalCaretsBlink);
		[CCode (cname = "gtk_scintilla_set_additional_sel_alpha")]
		public void set_additional_sel_alpha (int alpha);
		[CCode (cname = "gtk_scintilla_set_additional_sel_back")]
		public void set_additional_sel_back (int back);
		[CCode (cname = "gtk_scintilla_set_additional_sel_fore")]
		public void set_additional_sel_fore (int fore);
		[CCode (cname = "gtk_scintilla_set_additional_selection_typing")]
		public void set_additional_selection_typing (bool additionalSelectionTyping);
		[CCode (cname = "gtk_scintilla_set_anchor")]
		public void set_anchor (int posAnchor);
		[CCode (cname = "gtk_scintilla_set_backspace_unindents")]
		public void set_backspace_unindents (bool bsUnIndents);
		[CCode (cname = "gtk_scintilla_set_buffered_draw")]
		public void set_buffered_draw (bool buffered);
		[CCode (cname = "gtk_scintilla_set_caret_fore")]
		public void set_caret_fore (int fore);
		[CCode (cname = "gtk_scintilla_set_caret_line_back")]
		public void set_caret_line_back (int back);
		[CCode (cname = "gtk_scintilla_set_caret_line_back_alpha")]
		public void set_caret_line_back_alpha (int alpha);
		[CCode (cname = "gtk_scintilla_set_caret_line_visible")]
		public void set_caret_line_visible (bool show);
		[CCode (cname = "gtk_scintilla_set_caret_period")]
		public void set_caret_period (int periodMilliseconds);
		[CCode (cname = "gtk_scintilla_set_caret_sticky")]
		public void set_caret_sticky (int useCaretStickyBehaviour);
		[CCode (cname = "gtk_scintilla_set_caret_style")]
		public void set_caret_style (int caretStyle);
		[CCode (cname = "gtk_scintilla_set_caret_width")]
		public void set_caret_width (int pixelWidth);
		[CCode (cname = "gtk_scintilla_set_chars_default")]
		public void set_chars_default ();
		[CCode (cname = "gtk_scintilla_set_code_page")]
		public void set_code_page (int codePage);
		[CCode (cname = "gtk_scintilla_set_control_char_symbol")]
		public void set_control_char_symbol (int symbol);
		[CCode (cname = "gtk_scintilla_set_current_pos")]
		public void set_current_pos (int pos);
		[CCode (cname = "gtk_scintilla_set_cursor")]
		public void set_cursor (int cursorType);
		[CCode (cname = "gtk_scintilla_set_doc_pointer")]
		public void set_doc_pointer (int pointer);
		[CCode (cname = "gtk_scintilla_set_edge_colour")]
		public void set_edge_colour (int edgeColour);
		[CCode (cname = "gtk_scintilla_set_edge_column")]
		public void set_edge_column (int column);
		[CCode (cname = "gtk_scintilla_set_edge_mode")]
		public void set_edge_mode (int mode);
		[CCode (cname = "gtk_scintilla_set_end_at_last_line")]
		public void set_end_at_last_line (bool endAtLastLine);
		[CCode (cname = "gtk_scintilla_set_eol_mode")]
		public void set_eol_mode (int eolMode);
		[CCode (cname = "gtk_scintilla_set_extra_ascent")]
		public void set_extra_ascent (int extraAscent);
		[CCode (cname = "gtk_scintilla_set_extra_descent")]
		public void set_extra_descent (int extraDescent);
		[CCode (cname = "gtk_scintilla_set_first_visible_line")]
		public void set_first_visible_line (int lineDisplay);
		[CCode (cname = "gtk_scintilla_set_focus")]
		public void set_focus (bool focus);
		[CCode (cname = "gtk_scintilla_set_fold_expanded")]
		public void set_fold_expanded (int line, bool expanded);
		[CCode (cname = "gtk_scintilla_set_fold_flags")]
		public void set_fold_flags (int flags);
		[CCode (cname = "gtk_scintilla_set_fold_level")]
		public void set_fold_level (int line, int level);
		[CCode (cname = "gtk_scintilla_set_fold_margin_colour")]
		public void set_fold_margin_colour (bool useSetting, int back);
		[CCode (cname = "gtk_scintilla_set_fold_margin_hi_colour")]
		public void set_fold_margin_hi_colour (bool useSetting, int fore);
		[CCode (cname = "gtk_scintilla_set_font_quality")]
		public void set_font_quality (int fontQuality);
		[CCode (cname = "gtk_scintilla_set_h_scroll_bar")]
		public void set_h_scroll_bar (bool show);
		[CCode (cname = "gtk_scintilla_set_highlight_guide")]
		public void set_highlight_guide (int column);
		[CCode (cname = "gtk_scintilla_set_hotspot_active_back")]
		public void set_hotspot_active_back (bool useSetting, int back);
		[CCode (cname = "gtk_scintilla_set_hotspot_active_fore")]
		public void set_hotspot_active_fore (bool useSetting, int fore);
		[CCode (cname = "gtk_scintilla_set_hotspot_active_underline")]
		public void set_hotspot_active_underline (bool underline);
		[CCode (cname = "gtk_scintilla_set_hotspot_single_line")]
		public void set_hotspot_single_line (bool singleLine);
		[CCode (cname = "gtk_scintilla_set_indent")]
		public void set_indent (int indentSize);
		[CCode (cname = "gtk_scintilla_set_indentation_guides")]
		public void set_indentation_guides (int indentView);
		[CCode (cname = "gtk_scintilla_set_indicator_current")]
		public void set_indicator_current (int indicator);
		[CCode (cname = "gtk_scintilla_set_indicator_value")]
		public void set_indicator_value (int value);
		[CCode (cname = "gtk_scintilla_set_keys_unicode")]
		public void set_keys_unicode (bool keysUnicode);
		[CCode (cname = "gtk_scintilla_set_keywords")]
		public void set_keywords (int keywordSet, string keyWords);
		[CCode (cname = "gtk_scintilla_set_layout_cache")]
		public void set_layout_cache (int mode);
		[CCode (cname = "gtk_scintilla_set_length_for_encode")]
		public void set_length_for_encode (int bytes);
		[CCode (cname = "gtk_scintilla_set_lexer")]
		public void set_lexer (int lexer);
		[CCode (cname = "gtk_scintilla_set_lexer_language")]
		public void set_lexer_language (string language);
		[CCode (cname = "gtk_scintilla_set_lexer_property")]
		public void set_lexer_property (string key, string value);
		[CCode (cname = "gtk_scintilla_set_line_indentation")]
		public void set_line_indentation (int line, int indentSize);
		[CCode (cname = "gtk_scintilla_set_line_state")]
		public void set_line_state (int line, int state);
		[CCode (cname = "gtk_scintilla_set_main_selection")]
		public void set_main_selection (int selection);
		[CCode (cname = "gtk_scintilla_set_margin_left")]
		public void set_margin_left (int pixelWidth);
		[CCode (cname = "gtk_scintilla_set_margin_mask_n")]
		public void set_margin_mask_n (int margin, int mask);
		[CCode (cname = "gtk_scintilla_set_margin_right")]
		public void set_margin_right (int pixelWidth);
		[CCode (cname = "gtk_scintilla_set_margin_sensitive_n")]
		public void set_margin_sensitive_n (int margin, bool sensitive);
		[CCode (cname = "gtk_scintilla_set_margin_type_n")]
		public void set_margin_type_n (int margin, int marginType);
		[CCode (cname = "gtk_scintilla_set_margin_width_n")]
		public void set_margin_width_n (int margin, int pixelWidth);
		[CCode (cname = "gtk_scintilla_set_mod_event_mask")]
		public void set_mod_event_mask (int mask);
		[CCode (cname = "gtk_scintilla_set_mouse_down_captures")]
		public void set_mouse_down_captures (bool captures);
		[CCode (cname = "gtk_scintilla_set_mouse_dwell_time")]
		public void set_mouse_dwell_time (int periodMilliseconds);
		[CCode (cname = "gtk_scintilla_set_multi_paste")]
		public void set_multi_paste (int multiPaste);
		[CCode (cname = "gtk_scintilla_set_multiple_selection")]
		public void set_multiple_selection (bool multipleSelection);
		[CCode (cname = "gtk_scintilla_set_overtype")]
		public void set_overtype (bool overtype);
		[CCode (cname = "gtk_scintilla_set_paste_convert_endings")]
		public void set_paste_convert_endings (bool convert);
		[CCode (cname = "gtk_scintilla_set_position_cache")]
		public void set_position_cache (int size);
		[CCode (cname = "gtk_scintilla_set_print_colour_mode")]
		public void set_print_colour_mode (int mode);
		[CCode (cname = "gtk_scintilla_set_print_magnification")]
		public void set_print_magnification (int magnification);
		[CCode (cname = "gtk_scintilla_set_print_wrap_mode")]
		public void set_print_wrap_mode (int mode);
		[CCode (cname = "gtk_scintilla_set_property")]
		public static void set_property (GLib.Object object, uint property_id, GLib.Value value, GLib.ParamSpec pspec);
		[CCode (cname = "gtk_scintilla_set_read_only")]
		public void set_read_only (bool readOnly);
		[CCode (cname = "gtk_scintilla_set_rectangular_selection_anchor")]
		public void set_rectangular_selection_anchor (int posAnchor);
		[CCode (cname = "gtk_scintilla_set_rectangular_selection_anchor_virtual_space")]
		public void set_rectangular_selection_anchor_virtual_space (int space);
		[CCode (cname = "gtk_scintilla_set_rectangular_selection_caret")]
		public void set_rectangular_selection_caret (int pos);
		[CCode (cname = "gtk_scintilla_set_rectangular_selection_caret_virtual_space")]
		public void set_rectangular_selection_caret_virtual_space (int space);
		[CCode (cname = "gtk_scintilla_set_rectangular_selection_modifier")]
		public void set_rectangular_selection_modifier (int modifier);
		[CCode (cname = "gtk_scintilla_set_save_point")]
		public void set_save_point ();
		[CCode (cname = "gtk_scintilla_set_scroll_width")]
		public void set_scroll_width (int pixelWidth);
		[CCode (cname = "gtk_scintilla_set_scroll_width_tracking")]
		public void set_scroll_width_tracking (bool tracking);
		[CCode (cname = "gtk_scintilla_set_search_flags")]
		public void set_search_flags (int flags);
		[CCode (cname = "gtk_scintilla_set_sel")]
		public void set_sel (int start, int end);
		[CCode (cname = "gtk_scintilla_set_sel_alpha")]
		public void set_sel_alpha (int alpha);
		[CCode (cname = "gtk_scintilla_set_sel_back")]
		public void set_sel_back (bool useSetting, int back);
		[CCode (cname = "gtk_scintilla_set_sel_eol_filled")]
		public void set_sel_eol_filled (bool filled);
		[CCode (cname = "gtk_scintilla_set_sel_fore")]
		public void set_sel_fore (bool useSetting, int fore);
		[CCode (cname = "gtk_scintilla_set_selection")]
		public int set_selection (int caret, int anchor);
		[CCode (cname = "gtk_scintilla_set_selection_end")]
		public void set_selection_end (int pos);
		[CCode (cname = "gtk_scintilla_set_selection_mode")]
		public void set_selection_mode (int mode);
		[CCode (cname = "gtk_scintilla_set_selection_n_anchor")]
		public void set_selection_n_anchor (int selection, int posAnchor);
		[CCode (cname = "gtk_scintilla_set_selection_n_anchor_virtual_space")]
		public void set_selection_n_anchor_virtual_space (int selection, int space);
		[CCode (cname = "gtk_scintilla_set_selection_n_caret")]
		public void set_selection_n_caret (int selection, int pos);
		[CCode (cname = "gtk_scintilla_set_selection_n_caret_virtual_space")]
		public void set_selection_n_caret_virtual_space (int selection, int space);
		[CCode (cname = "gtk_scintilla_set_selection_n_start")]
		public void set_selection_n_start (int selection, int pos);
		[CCode (cname = "gtk_scintilla_set_selection_start")]
		public void set_selection_start (int pos);
		[CCode (cname = "gtk_scintilla_set_status")]
		public void set_status (int statusCode);
		[CCode (cname = "gtk_scintilla_set_style_bits")]
		public void set_style_bits (int bits);
		[CCode (cname = "gtk_scintilla_set_styling")]
		public void set_styling (int length, int style);
		[CCode (cname = "gtk_scintilla_set_styling_ex")]
		public void set_styling_ex (int length, string styles);
		[CCode (cname = "gtk_scintilla_set_tab_indents")]
		public void set_tab_indents (bool tabIndents);
		[CCode (cname = "gtk_scintilla_set_tab_width")]
		public void set_tab_width (int tabWidth);
		[CCode (cname = "gtk_scintilla_set_target_end")]
		public void set_target_end (int pos);
